STY: Fix spacing, transition duration

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -17,7 +17,7 @@ body {
 
 .lazy-img {
   opacity: 0;
-  transition: opacity ease-in-out 1s;
+  transition: opacity ease-in-out 0.5s;
 }
 
 .container-img {
